loading gif done, smooth transitions. Possible bug on firefox where page will not load unless dev tools are open. Cannot recreate on other browsers.

--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,6 @@ p{
 }
 
 
-
-
-
-
-
-
-
-
-
 /* Footer Styling */
 /*----------------------------------------------------------------------------------*/
 
@@ -168,24 +159,33 @@ p{
 /* Map Page */
 /*----------------------------------------------------------------------------------*/
 
-#map { 
+#map-container { 
     height: 800px;
     width: 800px; 
     text-align: center;
-    visibility: hidden;
     flex-grow: 1;
+    position: relative;
+}
+
+#map, #loading { 
+    position: absolute;
+    height: 100%;
+    width: 100%; 
+    text-align: center;
+    flex-grow: 1;
+    top: 0;
+    left: 0;
+
 }
 
 #loading {
-    position: fixed;
-	width: 100%;
-	height: 100%;
-	background: white url(../images/loading.gif) no-repeat center center;
-	top: 0;
-	left: 0;
-    transition: all 0.5s ease;
-    visibility: hidden;
-    opacity: 1;
+    background: white url(../images/loading.gif) no-repeat center center;
+    z-index: 10;
+    transition: opacity 1s ease-out;
+}
+
+.hidden {
+    opacity: 0;
 }
 
 #big-box {
